<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cat_breeds_nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.task.catganisation.ui.login.LoginFragment"
        android:label="@string/common_login"
        tools:layout="@layout/fragment_login"
        >

        <action
            android:id="@+id/action_loginFragment_to_breedsListFragment"
            app:destination="@id/breedsListFragment"
            app:enterAnim="@anim/anim_enter_from_right"
            app:exitAnim="@anim/anim_exit_to_left"
            app:popEnterAnim="@anim/anim_enter_from_left"
            app:popExitAnim="@anim/anim_exit_to_right"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"
            />

    </fragment>

    <fragment
        android:id="@+id/breedsListFragment"
        android:name="com.task.catganisation.ui.breeds.BreedsListFragment"
        android:label="@string/common_breeds"
        tools:layout="@layout/fragment_breeds_list"
        >
        <action
            android:id="@+id/action_breedsListFragment_to_breedDetailFragment"
            app:destination="@id/breedDetailFragment"
            app:enterAnim="@anim/anim_enter_from_right"
            app:exitAnim="@anim/anim_exit_to_left"
            app:popEnterAnim="@anim/anim_enter_from_left"
            app:popExitAnim="@anim/anim_exit_to_right"/>
    </fragment>

    <fragment
        android:id="@+id/breedDetailFragment"
        android:name="com.task.catganisation.ui.breeds.BreedDetailFragment"
        android:label="@string/common_breed_detail"
        tools:layout="@layout/fragment_breed_detail">
        <argument
            android:name="catBreed"
            app:argType="com.task.catganisation.parcel.CatBreed"
            app:nullable="false"/>
    </fragment>

</navigation>